2008-08-04  Ivan Frade  <ivan.frade@nokia.com>

	* src/tracker-indexer/tracker-indexer-module.[ch]
	(tracker_indexer_module_file_get_service_type): Call the function
	tracker_module_file_get_service_type in the module. If this
	function doesnt exist, use the module name as service type of the uri.
	* src/tracker-indexer/tracker-indexer.c
	* src/tracker-indexer/tracker-module.h
	* src/tracker-indexer/modules/dummy.c
	* src/tracker-indexer/modules/files.c
	(tracker_module_file_get_service_type): New function to obtain the
	service type of an uri. Implementation in the files module and
	explanation in "dummy" module.
	
2008-08-04  Martyn Russell  <martyn@imendio.com>

	* src/trackerd/tracker-crawler.[ch]: Make the is_path_ignored()
	function we used internally available externally as an API for the
	processor to call when we get new monitor events. This is to make
	sure we don't monitor files newly created just because they are in
	some directory. They too adhear to the filtering.
	
	* src/trackerd/tracker-daemon.c: Fixed referencing so we now
	actually finalize the daemon and the processor modules.
	
	* src/trackerd/tracker-marshal.list: 
	* src/trackerd/tracker-monitor.c: Added "is_directory" boolean
	to monitor events.
	
	* src/trackerd/tracker-processor.c: Now we create a TrackerCrawler
	for each module and we don't clean them up after the module is
	processed, we keep them around for the duration of the daemon's
	life. The reason being, we need to make sure we can call on the
	crawler for monitor event path filtering.

2008-08-04  Ivan Frade  <ivan.frade@nokia.com>

	Reverted previous commit.
	
2008-08-04  Ivan Frade  <ivan.frade@nokia.com>

	* src/trackerd/Makefile.am
	* src/trackerd/tracker-index-searcher.[ch]: Added
	* src/trackerd/tracker-query-tree.[ch]: Removed
	* src/trackerd/tracker-index.c
	* src/trackerd/tracker-search.c
	* src/trackerd/tracker-xesam.c	
	* src/trackerd/tracker-db.c:
	Renamed tracker-query-tree to tracker-index-searcher
	